2.0.2:
Fabian Greffrath - Tue Sep 12 00:15:56 PDT 2017
 * Added libpng save support for much smaller 8-bit images
Alexey - Mon Sep 11 23:50:31 PDT 2017
 * Added JPG save support when built with jpeglib
	IMG_SaveJPG() and IMG_SaveJPG_RW()

2.0.1:
Jeffrey Carpenter - Sat Nov 29 12:06:05 2014
 * Fixed image colorspace issue on iOS and Mac OS X
Sam Lantinga - Sun Jun 15 17:33:46 2014
 * Fixed support for transparency in XPM files
Davide Coppola - Thu Apr 17 17:30:12 2014
 * Fixed building JPEG support on Android
David Ludwig - Tue Apr 01 19:40:35 2014
 * Added support for building for Windows RT and Windows Phone
Timur - Wed Dec 11 21:24:36 2013
 * Fixed memory leak in webp image loading
Patrice Mandin - Thu Nov 07 19:15:28 2013
 * Fixed loading BMP files with large BITMAPINFOHEADER structures
Sam Lantinga - Fri Oct 11 21:54:20 2013
 * Fixed building with libpng 1.4

2.0.0:
Sam Lantinga - Sun Jun  2 22:25:31 PDT 2013
 * Added PNG save support based on miniz.c by Rich Geldreich
       IMG_SavePNG(), IMG_SavePNG_RW()
Sam Lantinga - Sat Jun  1 19:11:26 PDT 2013
 * Updated for SDL 2.0 release
Sam Lantinga - Sat Mar 23 13:36:51 PDT 2013
 * Fixed bug setting colorkey for indexed PNG images
Torsten Stremlau - Sun Mar 10 10:19:25 PDT 2013
 * Added support for alpha and lossless WEBP images

1.2.12:
mscott - 2012-02-06 19:40:23 PST
 * Fixed image corruption when using ImageIO framework
Sylvain - Thu Nov 22 13:09:59 PST 2012
 * Added extended XPM color table (disabled by default in IMG_xpm.c)
Sam Lantinga - Thu Jan 19 23:18:09 EST 2012
 * Fixed regression in 1.2.11 loading 8-bit PNG images with libpng

1.2.11:
Sam Lantinga - Sat Jan 14 17:54:38 EST 2012
 * Fixed loading 8-bit PNG images on Mac OS X
Sam Lantinga - Sat Dec 31 09:35:40 EST 2011
 * SDL_image is now under the zlib license
Michael Bonfils - Mon Nov 28 21:46:00 EST 2011
 * Added WEBP image support
Thomas Klausner - Wed Jan 19 19:31:25 PST 2011
 * Fixed compiling with libpng 1.4